development stage of Explore option

--- a/index.html
+++ b/index.html
@@ -20,7 +20,90 @@
                 </ul>
                 <ul class="nav-right">
                     <li class="display-right">
-                        <div class="explore">Explore<i class="fas fa-angle-down"></i></div>  
+                        <div class="explore"><a>Explore<i class="fas fa-angle-down"></i></a></div> 
+                        <div class="drp-down">
+                            <div class="drp-down-container">
+                                <div class="media">
+                                    <b>Media</b>
+                                    <a class="hide-xl pad" href="#">Photos</a>
+                                    <a class="hide-xl pad" href="#">Images</a>
+                                    <a class="hide-xl pad" href="#">Illustrations</a>
+                                    <a class="hide-xl pad" href="#">Videos</a>
+                                    <a class="hide-xl pad" href="#">Music</a>
+                                    <hr class="hide-xl">
+                                    <a class="pad" href="#">Editor's choice</a>
+                                    <a class="pad" href="#">Popular Images</a>
+                                    <a class="pad" href="#">Popular Videos</a>
+                                    <a class="pad" href="#">Popular Searches</a>
+                                </div>
+                                <div class="community">
+                                    <b>Community</b>
+                                    <a href="#">Blog</a>
+                                </div>
+                                <div class="about">
+                                    <div class="last-column">
+                                        <div>
+                                            <b>About</b>
+                                            <a href="#">About Us</a>
+                                            <a class="dd-box">
+                                                <i class="icon icon_language"></i>
+                                                Language
+                                            </a>
+                                            <div style="position: absolute; top: 282px; left: 360px; z-index: 100002; display: none;">
+                                                <a onmousedown="setCookie('lang', 'cs', 3650);" href="/cs/">Čeština</a>
+                                                <a onmousedown="setCookie('lang', 'da', 3650);" href="/da/">Dansk</a>
+                                                <a onmousedown="setCookie('lang', 'de', 3650);" href="/de/">Deutsch</a>
+                                                <a onmousedown="setCookie('lang', 'en', 3650);" href="/">English</a>
+                                                <a onmousedown="setCookie('lang', 'es', 3650);" href="/es/">Español</a>
+                                                <a onmousedown="setCookie('lang', 'fr', 3650);" href="/fr/">Français</a>
+                                                <a onmousedown="setCookie('lang', 'id', 3650);" href="/id/">Indonesia</a>
+                                                <a onmousedown="setCookie('lang', 'it', 3650);" href="/it/">Italiano</a>
+                                                <a onmousedown="setCookie('lang', 'hu', 3650);" href="/hu/">Magyar</a>
+                                                <a onmousedown="setCookie('lang', 'nl', 3650);" href="/nl/">Nederlands</a>
+                                                <a onmousedown="setCookie('lang', 'no', 3650);" href="/no/">Norsk</a>
+                                                <a onmousedown="setCookie('lang', 'pl', 3650);" href="/pl/">Polski</a>
+                                                <a onmousedown="setCookie('lang', 'pt', 3650);" href="/pt/">Português</a>
+                                                <a onmousedown="setCookie('lang', 'ro', 3650);" href="/ro/">Română</a>
+                                                <a onmousedown="setCookie('lang', 'sk', 3650);" href="/sk/">Slovenčina</a>
+                                                <a onmousedown="setCookie('lang', 'fi', 3650);" href="/fi/">Suomi</a>
+                                                <a onmousedown="setCookie('lang', 'sv', 3650);" href="/sv/">Svenska</a>
+                                                <a onmousedown="setCookie('lang', 'tr', 3650);" href="/tr/">Türkçe</a>
+                                                <a onmousedown="setCookie('lang', 'vi', 3650);" href="/vi/">Việt</a>
+                                                <a onmousedown="setCookie('lang', 'th', 3650);" href="/th/">ไทย</a>
+                                                <a onmousedown="setCookie('lang', 'bg', 3650);" href="/bg/">Български</a>
+                                                <a onmousedown="setCookie('lang', 'ru', 3650);" href="/ru/">Русский</a>
+                                                <a onmousedown="setCookie('lang', 'el', 3650);" href="/el/">Ελληνική</a>
+                                                <a onmousedown="setCookie('lang', 'ja', 3650);" href="/ja/">日本語</a>
+                                                <a onmousedown="setCookie('lang', 'ko', 3650);" href="/ko/">한국어</a>
+                                                <a onmousedown="setCookie('lang', 'zh', 3650);" href="/zh/">简体中文</a>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <hr>
+                                            <div class="menu-social-icons">
+                                                <div>
+                                                    <div>
+                                                        <a href="https:/facebook.com/yesh.surya.5" target="_blank">
+                                                            <i class="icon icon_facebook_fff"></i>
+                                                        </a>
+                                                    </div>
+                                                    <div>
+                                                        <a href="https://www.instagram.com/yeshwanth_nadh/">
+                                                            <i class="icon icon_instagram_fff"></i>
+                                                        </a>
+                                                    </div>
+                                                    <div>
+                                                        <a href="https://twitter.com/yeshsuriya">
+                                                            <i class="icon icon_instagram_fff"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
                     </li>
                     <!-- <i class="fas fa-angle-down"></i> -->
                     <li class="display-right"><a id="login" href="#">Log in</a></li>
