--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <header>
             <div class="main-header">
                 <ul class="nav-left">
-                    <li class="display-left logo"><a  href="#"></a></li>
+                    <li class="display-left logo"><a  href="#">
+                        <h1>ImageGram</h1>
+                    </a></li>
                     <li class="display-left"><a class="nav-hide" href="#">Photos</a></li>
                     <li class="display-left"><a class="nav-hide" href="#">Vectors</a></li>
                     <li class="display-left"><a class="nav-hide" href="#">Illustrations</a></li>
@@ -100,7 +102,20 @@
                     <i class="fas fa-search feature_search"></i>
                     <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
                     <input type="submit" id="search_submit">
-                    <div class="default_item">Images<i class="fas fa-angle-down search_arrow"></i></div>
+                    <div class="default_item">
+                        Images
+                        <i class="fas fa-angle-down search_arrow"></i>
+                        
+                    </div>
+                    <div class="search-option">
+                        <div>Images
+                            <div>Photos</div>
+                            <div>Vector Graphics</div>
+                            <div>Illustrations</div>
+                        </div>
+                        <div>Videos</div>
+                    </div>
+                    
                 </div>
                 <div class="popular_Images_line">Popular Images: background, nature, money, love, business, food, winter, flowers, office, computer, sky, dog</div>
                 <div class="free_images_line">Free images by Pixabay</div>
