Home page finish with css

--- a/index.html
+++ b/index.html
@@ -136,10 +136,21 @@
                     <div class="wrapper">
                         
                     </div>
+                    <div class="footer">
+                        <a class="discover_footer" href="#">
+                            <button>Discover more</button>
+                        </a>
+                        <div class="footer_data">
+                            <p>Free Images and Videos you can use anywhere</p>
+                            <p>JOIN ImageGram</p>
+                            <p class="end_footer">Download royalty free photos, videos and music. Share your own pictures as public domain with people all over the world.</p>
+                            <a href="#"><button>Sign up, it's free!</button></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="footer">
+        <!-- <div class="footer">
             <a class="discover_footer" href="#">
                 <button>Discover more</button>
             </a>
@@ -149,7 +160,7 @@
                 <p class="end_footer">Download royalty free photos, videos and music. Share your own pictures as public domain with people all over the world.</p>
                 <button>Sign up, it's free!</button>
             </div>
-        </div>
+        </div> -->
         <script>
                             
         </script>            
