--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pixabay</title>
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style/index.css">
+        <link rel="stylesheet" href="/style/style.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-        <script src="index.js"></script>
+        <script src="/scripts/index.js"></script>
         <!-- <script src="nav-dropdown.js"></script> -->
         <style>
             .show {
@@ -80,11 +80,11 @@
                         
                     </li>
                     <!-- <i class="fas fa-angle-down"></i> -->
-                    <li class="display-right nav-pad"><a id="login" href="#">Log in</a></li>
+                    <li class="display-right nav-pad"><a id="login" href="register.html">Log in</a></li>
                     <div>
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
-                    <li class="display-right join nav-pad"><a href="#">Join</a></li>
+                    <li class="display-right join nav-pad"><a href="register.html">Join</a></li>
                     <li class="display-right nav-pad"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></li>
                     <li class="menu-bar">
                         <a href="#">
