--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
         <title>Join ImageGram</title>
         <link rel="stylesheet" href="/style/index.css">
         <link rel="stylesheet" href="/style/register.css">
+        <link rel="stylesheet" href="/style/login.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="/scripts/index.js"></script>
     </head>
@@ -129,14 +130,12 @@
                     </div>
                     <hr class="hr_middle">
                     <form class="register_form" action="">
-                        <input id="username" type="text" placeholder="Username">
-                        <input id="email" type="text" placeholder="Email Address">
+                        <input id="username" type="text" placeholder="Username or Email">
                         <input id="password" type="password" placeholder="Password">
-                        <hr class="hr_down">
-                        <input id="register_submit" type="submit" value="Join">
+                        <input id="register_submit" type="submit" value="Login">
                     </form>
                     <div class="register_terms">
-                        By Joining ImageGram, you agree to our <a href="register.html"> Terms of service</a>
+                        
                     </div>
                 </div>
             </div>
