--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pixabay</title>
+        <title>ImageGram</title>
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="/style/index.css">
         <link rel="stylesheet" href="/style/register.css">
@@ -131,7 +131,7 @@
                             <p>Free Images and Videos you can use anywhere</p>
                             <p>JOIN ImageGram</p>
                             <p class="end_footer">Download royalty free photos, videos and music. Share your own pictures as public domain with people all over the world.</p>
-                            <a href="#"><button>Sign up, it's free!</button></a>
+                            <a href="register.html"><button>Sign up, it's free!</button></a>
                         </div>
                     </div>
                 </div>
