--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/style/register.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="/scripts/index.js"></script>
+        <script src="config.js"></script>
         <!-- <script src="nav-dropdown.js"></script> -->
         <style>
             .show {
