individual image page

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                         
                     </li>
                     <!-- <i class="fas fa-angle-down"></i> -->
-                    <li class="display-right nav-pad"><a id="login" href="login.html">Log in</a></li>
+                    <li class="display-right nav-pad"><a id="login" href="/pages/login.html">Log in</a></li>
                     <div>
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
-                    <li class="display-right join nav-pad"><a href="register.html">Join</a></li>
+                    <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
                     <li class="display-right nav-pad"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></li>
                     <li class="menu-bar">
                         <a href="#">
@@ -132,7 +132,7 @@
                             <p>Free Images and Videos you can use anywhere</p>
                             <p>JOIN ImageGram</p>
                             <p class="end_footer">Download royalty free photos, videos and music. Share your own pictures as public domain with people all over the world.</p>
-                            <a href="register.html"><button>Sign up, it's free!</button></a>
+                            <a href="/pages/register.html"><button>Sign up, it's free!</button></a>
                         </div>
                     </div>
                 </div>
