--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,7 @@
             <div class="main-header register-header">
                 <ul class="nav-left">
                     <li class="display-left logo">
-                        <a  href="index.html">
+                        <a  href="/index.html">
                             <h1>ImageGram</h1>
                         </a>
                     </li>
@@ -89,11 +89,11 @@
                         
                     </li>
                     <!-- <i class="fas fa-angle-down"></i> -->
-                    <li class="display-right nav-pad"><a id="login" href="login.html">Log in</a></li>
+                    <li class="display-right nav-pad"><a id="login" href="/pages/login.html">Log in</a></li>
                     <div>
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
-                    <li class="display-right join nav-pad"><a href="register.html">Join</a></li>
+                    <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
                     <li class="display-right nav-pad"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></li>
                     <li class="menu-bar">
                         <a href="#">
@@ -109,10 +109,10 @@
                 <div class="links">
                     <div class="links_container">
                         <div class="login">
-                           <a class="register_login" href="login.html">
+                           <a class="register_login" href="/pages/login.html">
                                 Login
                             </a>
-                            <a class="register_join" href="register.html">
+                            <a class="register_join" href="/pages/register.html">
                                 Join
                             </a>
                         </div>
