individual page css

--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -109,7 +109,7 @@
             <div class="individual_profile">
                 <div class="author_profile">
                     <div class="profile_image" style="background-image: url(https://cdn.pixabay.com/photo/2014/11/29/19/33/bald-eagle-550804_960_720.jpg);"></div>
-                    <div class="profile_name">Yeshwanth Kare</div>
+                    <div class="profile_name" style="margin-left: 10px;">Yeshwanth Kare</div>
                 </div>
                 <hr class="individual_up">
                 <div class="image_button">
