vector and photos page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <li class="display-left logo"><a  href="#">
                         <h1>ImageGram</h1>
                     </a></li>
-                    <li class="display-left"><a class="nav-hide" href="#">Photos</a></li>
-                    <li class="display-left"><a class="nav-hide" href="#">Vectors</a></li>
+                    <li class="display-left"><a class="nav-hide" href="/pages/photos.html">Photos</a></li>
+                    <li class="display-left"><a class="nav-hide" href="/pages/vectors.html">Vectors</a></li>
                     <li class="display-left"><a class="nav-hide" href="#">Illustrations</a></li>
                     <li class="display-left"><a class="nav-hide" href="#">Videos</a></li>
                 </ul>
@@ -37,9 +37,9 @@
                             <div class="dropdown_container">
                                <ul class="media">
                                     <b>Media</b>
-                                    <li><a class="hide-nav-option" href="">Photos</a></li>
+                                    <li><a class="hide-nav-option" href="/pages/photos.html">Photos</a></li>
                                     <li><a class="hide-nav-option" href="">Illustrations</a></li>
-                                    <li><a class="hide-nav-option" href="">Vectors</a></li>
+                                    <li><a class="hide-nav-option" href="/pages/vectors.html">Vectors</a></li>
                                     <li><a class="hide-nav-option" href="">Videos</a></li>
                                     <hr class="hide-nav-option">
                                     <li>
