--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
         <script src="/scripts/index.js"></script>
         <script src="config.js"></script>
         <!-- <script src="nav-dropdown.js"></script> -->
-        <style>
-            .show {
-                display: block;
-            }
-        </style>
 
     </head>
     <body>
@@ -26,7 +21,7 @@
                     </a></li>
                     <li class="display-left"><a class="nav-hide" href="/pages/photos.html">Photos</a></li>
                     <li class="display-left"><a class="nav-hide" href="/pages/vectors.html">Vectors</a></li>
-                    <li class="display-left"><a class="nav-hide" href="#">Illustrations</a></li>
+                    <li class="display-left"><a class="nav-hide" href="/pages/illustration.html">Illustrations</a></li>
                 </ul>
                 <ul class="nav-right">
                     <li>
@@ -36,7 +31,7 @@
                                <ul class="media">
                                     <b>Media</b>
                                     <li><a class="hide-nav-option" href="/pages/photos.html">Photos</a></li>
-                                    <li><a class="hide-nav-option" href="">Illustrations</a></li>
+                                    <li><a class="hide-nav-option" href="/pages/illustration.html">Illustrations</a></li>
                                     <li><a class="hide-nav-option" href="/pages/vectors.html">Vectors</a></li>
                                     <hr class="hide-nav-option">
                                     <li>
