--- a/pages/illustration.html
+++ b/pages/illustration.html
@@ -6,13 +6,11 @@
         <title>ImageGram</title>
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="/style/index.css">
-        <link rel="stylesheet" href="/style/register.css">
-        <link rel="stylesheet" href="/style/vector.css">
+        <link rel="stylesheet" href="/style/illustration.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="/scripts/index.js"></script>
+        <script src="/scripts/illustration.js"></script>
         <script src="/config.js"></script>
-        <script src="/scripts/photos.js"></script>
-        <script src="/scripts/vector.js"></script>
         <!-- <script src="nav-dropdown.js"></script> -->
         <style>
             .show {
@@ -97,7 +95,7 @@
             </div>
         </header>
         <div class="main">
-            <div class="vector_feature">
+            <div class="illustration_feature">
                 <h1>Stunning free images and royalty free stock</h1>
                 <h4>Over 1.9 million+ high quality stock images, videos and music shared by our talented community.</h4>
                 <div class="search_container">
@@ -111,7 +109,7 @@
                             <option value="vector graphics">Vector Graphics</option>
                             <option value="">Illustrations</option>
                         </select>
-                        <span class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
+                        <span style='background-color:aqua' class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
                     </div>
                     
                 </div>
@@ -120,7 +118,7 @@
             </div>
             <div class="images">
                 <div class="images_container">
-                    <div class="vector_wrapper">
+                    <div class="illustration_wrapper">
                         
                     </div>
                     <div class="footer">
