--- a/pages/photos.html
+++ b/pages/photos.html
@@ -29,7 +29,7 @@
                     </a></li>
                     <li class="display-left"><a class="nav-hide" href="/pages/photos.html">Photos</a></li>
                     <li class="display-left"><a class="nav-hide" href="/pages/vectors.html">Vectors</a></li>
-                    <li class="display-left"><a class="nav-hide" href="#">Illustrations</a></li>
+                    <li class="display-left"><a class="nav-hide" href="/pages/photos.html">Illustrations</a></li>
                 </ul>
                 <ul class="nav-right">
                     <li>
@@ -39,7 +39,7 @@
                                <ul class="media">
                                     <b>Media</b>
                                     <li><a class="hide-nav-option" href="/pages/photos.html">Photos</a></li>
-                                    <li><a class="hide-nav-option" href="">Illustrations</a></li>
+                                    <li><a class="hide-nav-option" href="/pages/illustration.html">Illustrations</a></li>
                                     <li><a class="hide-nav-option" href="/pages/vectors.html">Vectors</a></li>
                                     <hr class="hide-nav-option">
                                     <li>
@@ -96,7 +96,7 @@
             </div>
         </header>
         <div class="main">
-            <div class="photo_feature" style="background-image: url(https://cdn.pixabay.com/photo/2021/02/03/17/36/river-5978743_960_720.jpg);">
+            <div class="photo_feature">
                 <h1>Stunning free images and royalty free stock</h1>
                 <h4>Over 1.9 million+ high quality stock images, videos and music shared by our talented community.</h4>
                 <div class="search_container">
