completion of settings

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -115,29 +115,29 @@
 
             <div class="personal-data">
                 <div class="left_column">
-                    Personal Data <hr>
-                    <div class="username_setting">Username
+                    <span id="personal">Personal Data</span>
+                    <div class="username_setting"><span>Username</span>
                         <!-- <div class="username_heading">Username</div> -->
                         <input id="user_heading" type="text">
                     </div>
-                    <div class="profile_image_setting">Profile Image
+                    <div class="profile_image_setting"><span id="profile">Profile Image</span>
                         <!-- <div class="profile_image_heading">Profile Image</div> -->
                         <div class="profile_image_box"></div>
                     </div>
                     <div class="place_setting">
-                        <div class="city_setting">City
+                        <div class="city_setting"><span id="city">City</span>
                             <!-- <div class="city_heading">City</div> -->
                             <input id="city_name" type="text">
                         </div>
-                        <div class="country_setting">Country
+                        <div class="country_setting"><span id="country">Country</span>
                             <!-- <div class="country_heading">Country</div> -->
                             <input id="country_name" type="text">
                         </div>
                     </div>
                 </div>
                 <div class="right_column">
-                    Options
-                    <hr>
+                    <span id="option-heading">Options</span>
+                    <hr id="hr-option">
                     <div class="email_setting">
                         <div class="email-setting-header">Email Address</div>
                         <div class="current_email">Imagegram@gram.com</div>
@@ -145,13 +145,13 @@
                     </div>
                     <div class="signin_options">
                         <div class="signin_header">Sign in</div>
-                        <button><a href="">Facebook</a></button>
+                        <button id="facebook-button"><a href="">Facebook</a></button>
                         <button><a href="">Google</a></button>
                     </div>
                     <div class="extra_setting">
                         <div class="more_settings">More</div>
-                        <a href="">Change Password</a>
-                        <a href="">Deactivate account</a>
+                        <div id="set-password"><a id="set-password" href="">Change Password</a></div>
+                        <div id="del-account"><a id="del-account" href="">Deactivate account</a></div>
                     </div>
                 </div>
             </div>
