upload image html and css added

--- a/pages/myprofile.html
+++ b/pages/myprofile.html
@@ -93,7 +93,7 @@
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
                     <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
-                    <li class="display-right nav-pad"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></li>
+                    <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
                     <li class="menu-bar">
                         <a href="#">
                             <i class="fas fa-bars"></i>
@@ -103,7 +103,7 @@
 
             </div>
         </header>
-        <div class="myprofile_edit"><button>Edit Profile</button></div>
+        <div class="myprofile_edit"><a href="/pages/settings.html"><button>Edit Profile</button></a></div>
         <div class="myprofile_main">
             <div class="myprofile_container">
                 <div class="myprofile_name"><h1>Yeshwanth Kare</h1></div>
