--- a/pages/upload.html
+++ b/pages/upload.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Settings</title>
+        <title>Upload Image</title>
         <link rel="stylesheet" href="/style/index.css">
         <link rel="stylesheet" href="/style/register.css">
         <link rel="stylesheet" href="/style/login.css">
@@ -84,7 +84,7 @@
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
                     <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
-                    <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
+                    <li class="display-right nav-pad upload_left"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
                     <li class="menu-bar">
                         <a href="#">
                             <i class="fas fa-bars"></i>
