added profile dropdown

--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
                     <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
+                    <li class="user_profile_pic"></li>
+                    <li class="user_profile_dropdown">
+                        <ul>
+                            <li><a href="/pages/myprofile.html">My Profile</a></li>
+                            <li><a href="/pages/upload.html">Upload</a></li>
+                            <li><a href="/pages/settings.html">settings</a></li>
+                            <hr>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
+                    </li>
                     <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
                     <li class="menu-bar">
                         <a href="#">
