--- a/pages/settings.html
+++ b/pages/settings.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/style/login.css">
         <link rel="stylesheet" href="/style/settings.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/scripts/index.js"></script>
     </head>
     <body>
@@ -102,7 +103,7 @@
                             <li><a href="#">Logout</a></li>
                         </ul>
                     </li>
-                    <li class="display-right nav-pad"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></li>
+                    <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
                     <li class="menu-bar">
                         <a href="#">
                             <i class="fas fa-bars"></i>
@@ -169,5 +170,19 @@
         <div class="settings_save">
             <button><a href="">Save</a></button>
         </div>
+
+        <script>
+            $(document).ready(() => {
+                $('.user_profile_pic').click((e) => {
+                    e.stopPropagation();
+                    $('.user_profile_dropdown').fadeToggle('fast');
+                })
+
+                $(document).click(() => {
+                    $('.user_profile_dropdown').hide();
+                })
+               
+            })
+        </script> 
     </body>
 </html>
