--- a/pages/upload.html
+++ b/pages/upload.html
@@ -11,6 +11,7 @@
         <!-- <link rel="stylesheet" href="/style/settings.css"> -->
         <link rel="stylesheet" href="/style/upload.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/scripts/index.js"></script>
     </head>
     <body>
@@ -123,5 +124,19 @@
             </form>
             
         </div>
+
+        <script>
+            $(document).ready(() => {
+                $('.user_profile_pic').click((e) => {
+                    e.stopPropagation();
+                    $('.user_profile_dropdown').fadeToggle('fast');
+                })
+
+                $(document).click(() => {
+                    $('.user_profile_dropdown').hide();
+                })
+               
+            })
+        </script> 
     </body>
 </html>
