--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ImageGram</title>
-        <link rel="stylesheet" href="/style/index.css">
+        <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="/style/register.css">
+        <link rel="stylesheet" href="/style/index.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/scripts/index.js"></script>
