adding individual post link

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -30,7 +30,7 @@
                     </a></li>
                     <li class="display-left"><a class="nav-hide" href="/pages/photos.html">Photos</a></li>
                     <li class="display-left"><a class="nav-hide" href="/pages/vectors.html">Vectors</a></li>
-                    <li class="display-left"><a class="nav-hide" href="/pages/photos.html">Illustrations</a></li>
+                    <li class="display-left"><a class="nav-hide" href="/pages/illustration.html">Illustrations</a></li>
                 </ul>
                 <ul class="nav-right">
                     <li>
