individual image show

--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -12,6 +12,8 @@
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/scripts/index.js"></script>
+    <script src="/scripts/individual.js"></script>
+    <script src="../config.js"></script>
 </head>
 <body>
     <header>
@@ -112,12 +114,12 @@
     <div class="individual-image-main">
         <div class="individual_container">
             <div class="individual_image_container">
-                <img src="https://cdn.pixabay.com/photo/2021/02/06/12/31/dresden-5987976_960_720.jpg" alt="">
+                <!-- <img src="" id="image-source" alt=""> -->
             </div>
             <div class="individual_profile">
                 <div class="author_profile">
-                    <div class="profile_image" style="background-image: url(https://cdn.pixabay.com/photo/2014/11/29/19/33/bald-eagle-550804_960_720.jpg);"></div>
-                    <div class="profile_name" style="margin-left: 10px;">Yeshwanth Kare</div>
+                    <div class="profile_image"></div>
+                    <div class="profile_name" style="margin-left: 10px;"></div>
                 </div>
                 <hr class="individual_up">
                 <div class="image_button">
@@ -146,6 +148,8 @@
             })
             
         })
-    </script> 
+
+    </script>
+    <script src="../config.js"></script> 
 </body>
 </html>
