--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
-    <link rel="stylesheet" href="/style/index.css">
-    <link rel="stylesheet" href="/style/register.css">
-    <link rel="stylesheet" href="/style/login.css">
-    <link rel="stylesheet" href="/style/individual.css">
+    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="../style/register.css">
+    <link rel="stylesheet" href="../style/login.css">
+    <link rel="stylesheet" href="../style/individual.css">
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/scripts/index.js"></script>
-    <script src="/scripts/individual.js"></script>
-    <script src="../config.js"></script>
+    <script src="../scripts/index.js"></script>
+    <script src="../scripts/individual.js"></script>
+    <script src="../config1.js"></script>
 </head>
 <body>
     <header>
@@ -150,6 +150,10 @@
         })
 
     </script>
-    <script src="../config.js"></script> 
+    <!-- <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/scripts/index.js"></script>
+    <script src="/scripts/individual.js"></script>
+    <script src="../config.js"></script> -->
 </body>
 </html>
