removed the unwanted html

--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -123,15 +123,15 @@
                 </div>
                 <hr class="individual_up">
                 <div class="image_button">
-                    <button class="individual_like"><i class="far fa-heart"></i> 34</button>
-                    <button class="individual_favorite"><i class="far fa-star"></i> 32</button>
+                    <button class="individual_like"></button>
+                    <button class="individual_favorite"></button>
                     <button class="individual_share"><i class="fas fa-share-alt"></i></button>
                 </div>
                 <hr class="individual_down">
         
             </div>
             <div class="individual_last">
-                <div class="image_comments"><button>34 comments</button></div>
+                <div class="image_comments"></div>
                 <div class="login_request"><a href="/pages/login.html">Sign in</a> to leave a comment</div>
             </div>
         </div>
