--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/scripts/index.js"></script>
         <script src="./config.js"></script>
+        <!-- <script src="/scripts/photos.js"></script> -->
         <!-- <script src="nav-dropdown.js"></script> -->
 
     </head>
