--- a/pages/photos.html
+++ b/pages/photos.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/style/photos.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="/scripts/index.js"></script>
+        <script src="../scripts/index.js"></script>
         <script src="/config.js"></script>
         <script src="/scripts/photos.js"></script>
         <!-- <script src="nav-dropdown.js"></script> -->
