adding of search page

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                     <input type="submit" id="search_submit">
                     <div class="search-select">
                         <select name="option" id="option">
-                            <option value="images">Images</option>
-                            <option value="photos">Photos</option>
-                            <option value="vector graphics">Vector Graphics</option>
-                            <option value="">Illustrations</option>
+                            <option id="image_option" value="image">images</option>
+                            <option id="photo_option" value="photo">photo</option>
+                            <option id="vector_option" value="vector">vector</option>
+                            <option id="illustration_option" value="illustration">illustration</option>
                         </select>
                         <span class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
                     </div>
