--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="/style/index.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="/scripts/index.js"></script>
+        <script src="./scripts/index.js"></script>
         <script src="./config.js"></script>
         <!-- <script src="/scripts/photos.js"></script> -->
         <!-- <script src="nav-dropdown.js"></script> -->
@@ -106,13 +106,16 @@
                 <h4>Over 1.9 million+ high quality stock images, videos and music shared by our talented community.</h4>
                 <div class="search_container">
                     <i class="fas fa-search feature_search"></i>
-                    <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
-                    <input type="submit" id="search_submit">
+                    <form>
+                        <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
+                        <input type="submit" id="search_submit">
+                    </form>
+                    
                     <div class="search-select">
                         <select name="option" id="option">
                             <option id="image_option" value="image">images</option>
                             <option id="photo_option" value="photo">photo</option>
-                            <option id="vector_option" value="vector">vector</option>
+                            <option id="vector_option" value="vector">vector Graphics</option>
                             <option id="illustration_option" value="illustration">illustration</option>
                         </select>
                         <span class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
