added image search

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                     <div class="search-select">
                         <select name="option" id="option">
                             <option id="image_option" value="image">images</option>
-                            <option id="photo_option" value="photo">photo</option>
+                            <option id="photo_option" value="photo">photos</option>
                             <option id="vector_option" value="vector">vector Graphics</option>
-                            <option id="illustration_option" value="illustration">illustration</option>
+                            <option id="illustration_option" value="illustration">illustrations</option>
                         </select>
                         <span class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
                     </div>
