--- a/pages/vectors.html
+++ b/pages/vectors.html
@@ -113,14 +113,16 @@
                 <h4>Over 1.9 million+ high quality stock images, videos and music shared by our talented community.</h4>
                 <div class="search_container">
                     <i class="fas fa-search feature_search"></i>
-                    <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
-                    <input type="submit" id="search_submit">
+                    <form>
+                        <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
+                        <input type="submit" id="search_submit">
+                    </form>
                     <div class="search-select">
                         <select name="option" id="option">
-                            <option value="images">Images</option>
-                            <option value="photos">Photos</option>
-                            <option value="vector graphics">Vector Graphics</option>
-                            <option value="">Illustrations</option>
+                            <option value="image">Images</option>
+                            <option value="photo">Photos</option>
+                            <option value="vector">Vector Graphics</option>
+                            <option value="illustration">Illustrations</option>
                         </select>
                         <span class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
                     </div>
