--- a/pages/myprofile.html
+++ b/pages/myprofile.html
@@ -12,7 +12,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="/scripts/index.js"></script>
-        <script src="config.js"></script>
+        <script src="/scripts/myprofile.js"></script>
+        <script src="/config1.js"></script>
     </head>
     <body>
         <header>
@@ -26,14 +27,16 @@
                     <li>
                         <div class="register_search">
                             <i class="fas fa-search feature_search_register"></i>
-                            <input type="text" id="register_Search" placeholder="Search">
-                            <input type="submit" id="search_submit">
+                            <form>
+                                <input type="text" id="register_Search" placeholder="Search">
+                                <input type="submit" id="search_submit">
+                            </form>
                             <div class="register_select">
                                 <select name="option" id="register_option">
-                                    <option value="images">Images</option>
-                                    <option value="photos">Photos</option>
-                                    <option value="vector graphics">Vector Graphics</option>
-                                    <option value="">Illustrations</option>
+                                    <option value="image">Images</option>
+                                    <option value="photo">Photos</option>
+                                    <option value="vector">Vector Graphics</option>
+                                    <option value="illustration">Illustrations</option>
                                 </select>
                                 <span class="register_search_arrow"><i class="fas fa-angle-down search_arrow register_arrow"></i></span>
                             </div>
