--- a/pages/photos.html
+++ b/pages/photos.html
@@ -12,7 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="../scripts/index.js"></script>
         <script src="/config.js"></script>
-        <script src="/scripts/photos.js"></script>
+        <script src="../scripts/photos.js"></script>
         <!-- <script src="nav-dropdown.js"></script> -->
         <style>
             .show {
@@ -112,14 +112,16 @@
                 <h4>Over 1.9 million+ high quality stock images, videos and music shared by our talented community.</h4>
                 <div class="search_container">
                     <i class="fas fa-search feature_search"></i>
-                    <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
-                    <input type="submit" id="search_submit">
+                    <form>
+                        <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
+                        <input type="submit" id="search_submit">
+                    </form>
                     <div class="search-select">
                         <select name="option" id="option">
-                            <option value="images">Images</option>
-                            <option value="photos">Photos</option>
-                            <option value="vector graphics">Vector Graphics</option>
-                            <option value="">Illustrations</option>
+                            <option value="image">Images</option>
+                            <option value="photo">Photos</option>
+                            <option value="vector">Vector Graphics</option>
+                            <option value="illustration">Illustrations</option>
                         </select>
                         <span style='background-color:aqua' class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
                     </div>
